testdata/invalid/constant_invalid_02.lisp
;;error:2:17-20:missing constant definition
(defconst ONE 2 TWO)
